--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,22 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style=" background: #191b1e; color: #d9dab2; margin: 0; padding: 0; letter-spacing: 1px;">
 <head>
   <meta charset="utf-8">
   <title>QrCode</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <title>Qr Code generator</title> -->
+    <!-- to fetch the css when working with flask use {{ url_for('static', filename='main.css') }} as the href -->
+    <!-- <link type="text/css" rel="stylesheet"  href="{{ url_for('static', filename='main.css') }}" />
+    <script src="{{ url_for('static', filename='main.js') }}"></script> -->
+    <!-- <meta content="width=device-width, initial-scale=1" name="viewport" /> -->
+    <!-- <style>
+        @font-face{
+            font-family: KenyanCoffee;
+            /* src: url("{{ url_for('static',filename='kenyanCoffee.ttf') }}") ; */
+        }
+        </style> -->
 </head>
 <body>
   <app-root></app-root>
